included meta tags for seo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phillip Francis Chapita Portfolio</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Phillip Francis Chapita Portfolio" />
+    <meta name="description"
+      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
+    <link rel="canonical" href="https://phil-portfolio-two.vercel.app/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://phil-portfolio-two.vercel.app/" />
+    <meta property="og:title" content="Phillip Francis Chapita Portfolio" />
+    <meta property="og:description"
+      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
+    <meta property="og:image" content="/preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://phil-portfolio-two.vercel.app/" />
+    <meta property="twitter:title" content="Phillip Francis Chapita Portfolio" />
+    <meta property="twitter:description"
+      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
+    <meta property="twitter:image" content="/preview.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
 
   <body>
