fixed image format

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Phillip Francis Chapita Portfolio" />
     <meta property="og:description"
       content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
-    <meta property="og:image" content="/preview.png" />
+    <meta property="og:image" content="/preview.PNG" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -26,7 +26,7 @@
     <meta property="twitter:title" content="Phillip Francis Chapita Portfolio" />
     <meta property="twitter:description"
       content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
-    <meta property="twitter:image" content="/preview.png" />
+    <meta property="twitter:image" content="/preview.PNG" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
   </head>
