edited meta description tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Primary Meta Tags -->
     <meta name="title" content="Phillip Francis Chapita Portfolio" />
     <meta name="description"
-      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
+      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization." />
     <link rel="canonical" href="https://phil-portfolio-two.vercel.app/">
 
     <!-- Open Graph / Facebook -->
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://phil-portfolio-two.vercel.app/" />
     <meta property="og:title" content="Phillip Francis Chapita Portfolio" />
     <meta property="og:description"
-      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
+      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization." />
     <meta property="og:image" content="/preview.PNG" />
 
     <!-- Twitter -->
@@ -25,7 +25,7 @@
     <meta property="twitter:url" content="https://phil-portfolio-two.vercel.app/" />
     <meta property="twitter:title" content="Phillip Francis Chapita Portfolio" />
     <meta property="twitter:description"
-      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization. Strong problem-solving skills, delivering actionable insights" />
+      content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization." />
     <meta property="twitter:image" content="/preview.PNG" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
