url name changes and updated resume file

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phillip Francis Chapita Portfolio</title>
+    <title>Phillip Francis Chapita</title>
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Phillip Francis Chapita Portfolio" />
+    <meta name="title" content="Phillip Francis Chapita" />
     <meta name="description"
       content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization." />
-    <link rel="canonical" href="https://phil-portfolio-two.vercel.app/">
+    <link rel="canonical" href="https://www.phillipchapita.com/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://phil-portfolio-two.vercel.app/" />
-    <meta property="og:title" content="Phillip Francis Chapita Portfolio" />
+    <meta property="og:url" content="https://www.phillipchapita.com/" />
+    <meta property="og:title" content="Phillip Francis Chapita" />
     <meta property="og:description"
       content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization." />
     <meta property="og:image" content="/preview.PNG" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://phil-portfolio-two.vercel.app/" />
-    <meta property="twitter:title" content="Phillip Francis Chapita Portfolio" />
+    <meta property="twitter:url" content="https://www.phillipchapita.com/" />
+    <meta property="twitter:title" content="Phillip Francis Chapita" />
     <meta property="twitter:description"
       content="Phillip Francis Chapita is an experienced software developer and data analyst adept at complex data analysis, manipulation, and visualization." />
     <meta property="twitter:image" content="/preview.PNG" />
